// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeReducer  should handle GET_USER_LOCATION_SUCCEEDED 1`] = `
Object {
  "bookmarkView": false,
  "errorMessage": "",
  "historyView": false,
  "trafficImagesView": false,
  "userLocation": Array [
    undefined,
  ],
}
`;

exports[`HomeReducer  should handle HISTORY_VIEW 1`] = `
Object {
  "bookmarkView": false,
  "errorMessage": "",
  "historyView": true,
  "trafficImagesView": false,
  "userLocation": Array [],
}
`;

exports[`HomeReducer  should handle TOGGLE_ROUTE_PLANNER 1`] = `
Object {
  "bookmarkView": false,
  "errorMessage": "",
  "historyView": false,
  "trafficImagesView": false,
  "userLocation": Array [],
}
`;

exports[`HomeReducer  should handle TOGGLE_TRAFFIC_IMAGES_VIEW 1`] = `
Object {
  "bookmarkView": false,
  "errorMessage": "",
  "historyView": false,
  "trafficImagesView": false,
  "userLocation": Array [],
}
`;

exports[`HomeReducer  should return the initial state 1`] = `
Object {
  "bookmarkView": false,
  "errorMessage": "",
  "historyView": false,
  "trafficImagesView": false,
  "userLocation": Array [],
}
`;
